--- a/aapmsamp.tex
+++ b/aapmsamp.tex
@@ -466,6 +466,8 @@ width in \texttt{twocolumn} mode. It is supposed to set on the full width of the
 The tables in this document illustrate various effects.
 Tables that fit in a narrow column are contained in a \texttt{table}
 environment.
+
+\avi{test}
 Table~\ref{tab:table3} is a wide table, therefore set with the
 \texttt{table*} environment.
 Lengthy tables may need to break across pages.
