Updates from Overleaf

--- a/apssamp.bib
+++ b/apssamp.bib
@@ -248,3 +248,180 @@ keywords = {Mathematical analysis},
   year={2005},
   publisher={MAA}
 }
+
+@article{abbott2016observation,
+  title={Observation of gravitational waves from a binary black hole merger},
+  author={Abbott, Benjamin P and Abbott, Richard and Abbott, TDe and Abernathy, MR and Acernese, Fausto and Ackley, Kendall and Adams, Carl and Adams, Thomas and Addesso, Paolo and Adhikari, RX and others},
+  journal={Physical review letters},
+  volume={116},
+  number={6},
+  pages={061102},
+  year={2016},
+  publisher={APS}
+}
+
+@article{danzmann2000lisa,
+  title={LISA mission overview},
+  author={Danzmann, Karsten},
+  journal={Advances in Space Research},
+  volume={25},
+  number={6},
+  pages={1129--1136},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@book{alma9998701914002091,
+author = {Casella, George. and Berger, Roger L.},
+address = {Australia ;},
+booktitle = {Statistical inference},
+edition = {2nd ed.},
+isbn = {0534243126},
+keywords = {Mathematical statistics},
+language = {eng},
+lccn = {2001025794},
+publisher = {Thomson Learning},
+title = {Statistical inference },
+year = {2002},
+}
+
+@book{GelmanAndrew2014,
+isbn = {9781439840955},
+year = {2014},
+title = {Bayesian data analysis},
+edition = {Third edition},
+author = {Gelman, Andrew and Carlin, John B. and Stern, Hal S. and Rubin, Donald B.},
+ publisher = {Chapman \& Hall},
+ address = {New York, NY, USA}
+}
+
+@inproceedings{RobertCP2009CmfB,
+pages = {251--262},
+volume = {1193},
+publisher = {American Institute of Physics},
+booktitle = {AIP conference proceedings.},
+isbn = {9780735407299},
+year = {2009},
+title = {Computational methods for Bayesian model choice},
+address = {New York :},
+author = {Robert, C P and Wraith, D and Goggans, Paul M and Chan, Chun-Yong},
+series = {BAYESIAN INFERENCE AND MAXIMUM ENTROPY METHODS IN SCIENCE AND ENGINEERING: The 29th International Workshop on Bayesian Inference and Maximum Entropy Methods in Science and Engineering},
+issn = {0094-243X},
+journal = {AIP conference proceedings.}
+}
+
+@article{ChristensenNelson2022Pewg,
+author = {Christensen, Nelson and Meyer, Renate},
+address = {Ithaca},
+copyright = {2022. This work is published under http://creativecommons.org/licenses/by-nc-nd/4.0/ (the “License”). Notwithstanding the ProQuest Terms and Conditions, you may use this content in accordance with the terms of the License.},
+issn = {0034-6861},
+journal = {Reviews of modern physics},
+keywords = {Astronomy ; Binary stars ; Black holes ; Gravitational waves ; Neutron stars ; Parameter estimation ; Physical properties ; Physics - General Relativity and Quantum Cosmology ; Pulsars ; Relativity ; Signal detection ; Star mergers ; Statistical methods ; Supernovae ; Waveforms},
+language = {eng},
+number = {2},
+pages = {1-},
+publisher = {Cornell University Library, arXiv.org},
+title = {Parameter estimation with gravitational waves},
+volume = {94},
+year = {2022},
+}
+
+@article{WatanabeSumio2010AEoB,
+author = {Watanabe, Sumio},
+address = {Ithaca},
+copyright = {2010. This work is published under http://arxiv.org/licenses/nonexclusive-distrib/1.0/ (the “License”). Notwithstanding the ProQuest Terms and Conditions, you may use this content in accordance with the terms of the License.},
+issn = {2331-8422},
+journal = {arXiv.org},
+keywords = {Asymptotic properties ; Bayesian analysis ; Computer Science - Learning ; Criteria ; Equivalence ; Errors ; Learning ; Learning theory ; Optimization ; Random variables ; Statistical methods ; Statistical models},
+language = {eng},
+publisher = {Cornell University Library, arXiv.org},
+title = {Asymptotic Equivalence of Bayes Cross Validation and Widely Applicable Information Criterion in Singular Learning Theory},
+year = {2010},
+}
+
+@misc{StoicaP.2004Msar,
+author = {Stoica, P. and Selen, Y.},
+address = {New York},
+issn = {1053-5888},
+journal = {IEEE signal processing magazine},
+keywords = {Autoregressive moving average ; Covariance matrix ; Criteria ; Frequency ; Mathematical analysis ; Mathematical models ; Maximum likelihood estimation ; Noise level ; Parameter estimation ; Phase noise ; Probability density function ; Sensor arrays ; Signal processing ; Specifications ; Vectors (mathematics) ; Vehicles},
+language = {eng},
+number = {4},
+pages = {36-47},
+publisher = {IEEE},
+title = {Model-order selection: a review of information criterion rules},
+volume = {21},
+year = {2004},
+}
+
+@article{NewtonRaftery,
+    author = {Newton, Michael A. and Raftery, Adrian E.},
+    title = "{Approximate Bayesian Inference with the Weighted Likelihood Bootstrap}",
+    journal = {Journal of the Royal Statistical Society: Series B (Methodological)},
+    volume = {56},
+    number = {1},
+    pages = {3-26},
+    year = {2018},
+    month = {12},
+    issn = {0035-9246},
+    doi = {10.1111/j.2517-6161.1994.tb01956.x},
+    url = {https://doi.org/10.1111/j.2517-6161.1994.tb01956.x},
+    eprint = {https://academic.oup.com/jrsssb/article-pdf/56/1/3/49173498/jrsssb\_56\_1\_3.pdf},
+}
+
+@article{TierneyLuke1989FELA,
+author = {Tierney, Luke and Kass, Robert E. and Kadane, Joseph B.},
+address = {Alexandria, VA},
+copyright = {Copyright Taylor & Francis Group, LLC 1989},
+issn = {0162-1459},
+journal = {Journal of the American Statistical Association},
+keywords = {Approximation ; Approximation theory ; Asymptotic expansions ; Bayesian analysis ; Difference quotients ; Exact sciences and technology ; Inference ; Integrals ; Integrands ; Laplaces method ; Mathematical foundations ; Mathematical functions ; Mathematical integrals ; Mathematics ; Parameterization ; Probability and statistics ; Sciences and techniques of general use ; Statistical discrepancies ; Statistics ; Theory and Methods},
+language = {eng},
+number = {407},
+pages = {710-716},
+publisher = {Taylor & Francis Group},
+title = {Fully Exponential Laplace Approximations to Expectations and Variances of Nonpositive Functions},
+volume = {84},
+year = {1989},
+}
+
+
+@article{punturo2010einstein,
+  title={The Einstein Telescope: a third-generation gravitational wave observatory},
+  author={Punturo, M and Abernathy, M and Acernese, F and Allen, B and Andersson, Nils and Arun, K and Barone, F and Barr, B and Barsuglia, M and Beker, M and others},
+  journal={Classical and Quantum Gravity},
+  volume={27},
+  number={19},
+  pages={194002},
+  year={2010},
+  publisher={IOP Publishing}
+}
+
+@article{Somo2020CTfT,
+abstract = {Classic inversion methods adjust a model with a predefined number of parameters to the observed data. With transdimensional inversion algorithms such as the reversible-jump Markov chain Monte Carlo (rjMCMC), it is possible to vary this number during the inversion and to interpret the observations in a more flexible way. Geoscience imaging applications use this behaviour to automatically adjust model resolution to the inhomogeneities of the investigated system, while keeping the model parameters on an optimal level. The rjMCMC algorithm produces an ensemble as result, a set of model realizations, which together represent the posterior probability distribution of the investigated problem. The realizations are evolved via sequential updates from a randomly chosen initial solution and converge toward the target posterior distribution of the inverse problem. Up to a point in the chain, the realizations may be strongly biased by the initial model, and must be discarded from the final ensemble. With convergence assessment techniques, this point in the chain can be identified. Transdimensional MCMC methods produce ensembles that are not suitable for classic convergence assessment techniques because of the changes in parameter numbers. To overcome this hurdle, three solutions are introduced to convert model realizations to a common dimensionality while maintaining the statistical characteristics of the ensemble. A scalar, a vector and a matrix representation for models is presented, inferred from tomographic subsurface investigations, and three classic convergence assessment techniques are applied on them. It is shown that appropriately chosen scalar conversions of the models could retain similar statistical ensemble properties as geologic projections created by rasterization.},
+author = {Somogyvári, Márk and Reich, Sebastian},
+address = {Berlin/Heidelberg},
+copyright = {International Association for Mathematical Geosciences 2019},
+issn = {1874-8961},
+journal = {Mathematical geosciences},
+keywords = {Algorithms ; Chemistry and Earth Sciences ; Computer Science ; Computer simulation ; Conditional probability ; Convergence ; Distribution ; Earth and Environmental Science ; Earth science ; Earth Sciences ; Geology ; Geosciences, Multidisciplinary ; Geotechnical Engineering & Applied Earth Sciences ; Hydrogeology ; Identification methods ; Imaging techniques ; Inverse problems ; Inversion ; Investigations ; Markov analysis ; Markov chains ; Mathematical models ; Mathematics ; Mathematics, Interdisciplinary Applications ; Matrix algebra ; Matrix methods ; Matrix representation ; Parameters ; Physical Sciences ; Physics ; Probability distribution ; Probability theory ; Production methods ; Science & Technology ; Special Issue ; Statistical analysis ; Statistical methods ; Statistics ; Statistics for Engineering ; Subsurface investigations},
+language = {eng},
+number = {5},
+pages = {651-668},
+publisher = {Springer Berlin Heidelberg},
+title = {Convergence Tests for Transdimensional Markov Chains in Geoscience Imaging},
+volume = {52},
+year = {2020},
+}
+
+@article{rouder2018theories,
+  title={From theories to models to predictions: A Bayesian model comparison approach},
+  author={Rouder, Jeffrey N and Haaf, Julia M and Aust, Frederik},
+  journal={Communication Monographs},
+  volume={85},
+  number={1},
+  pages={41--56},
+  year={2018},
+  publisher={Taylor \& Francis}
+}
+
