remove unused files

--- a/apssamp.tex
+++ b/apssamp.tex
@@ -161,8 +161,8 @@ Abstract: a super fast method
 %\tableofcontents
 
 \section{\label{sec:introduction} Introduction}
-On September 14, 2015, the Laser Interferometer Gravitational-Wave Observatory (LIGO) directly detected gravitational waves for the very first time. These waves were emitted by the inspiral and merger of two solar mass black holes. For this spectacular discovery, the founders of LIGO, Barry Barish, Kip Thorne and Rainer Weiss were awarded the Nobel Prize in Physics in 2017.  Since then, the collaborations of the American LIGO detectors and the European Virgo detector have announced a total of 90 detections of gravitational waves (GWs) emitted by merging compact objects. LIGO, Virgo, and the Japanese KAGRA detector started another observation run in May 2023 which will last for 18 months and observe in the 20Hz to 2 kHz frequency range. The GWs observed to date stem from the mergers of solar-mass binary black holes and/or neutron stars but GWs from core-collapse supernovae and rapidly rotating neutron stars are potential sources that emit GWs in the frequency band of LIGO/Virgo/KAGRA (LVK).
-Further  ground-based interferometers with increased sensitivity, the Einstein Telescope in Europe and Cosmic Explorer in the US, are in the planning stages and should start observing in the mid 2030s. The Laser Interferometer Space Antenna or short LISA, a space mission led by the European Space Agency with support from NASA, and the Chinese space mission Tianji will observe in the mHz band from 2035 and will be sensitive to emissions from supermassive black holes, massive compact objects orbiting a supermassive black hole and the stochastic gravitational wave background from physical processes in the very early Universe.
+On September 14, 2015, the Laser Interferometer Gravitational-Wave Observatory (LIGO) directly detected gravitational waves for the very first time. These waves were emitted by the inspiral and merger of two solar mass black holes. For this spectacular discovery, the founders of LIGO, Barry Barish, Kip Thorne and Rainer Weiss were awarded the Nobel Prize in Physics in 2017.  Since then, the collaborations of the American LIGO detectors and the European Virgo detector have announced a total of 90 detections of gravitational waves (GWs) emitted by merging compact objects. LIGO, Virgo, and the Japanese KAGRA detector started another observation run in May 2023, which will last for 18 months and observe in the 20Hz to 2 kHz frequency range. The GWs observed to date stem from the mergers of solar-mass binary black holes and/or neutron stars but GWs from core-collapse supernovae and rapidly rotating neutron stars are potential sources that emit GWs in the frequency band of LIGO/Virgo/KAGRA (LVK).
+Further ground-based interferometers with increased sensitivity, the Einstein Telescope in Europe and Cosmic Explorer in the US, are in the planning stages and should start observing in the mid 2030s. The Laser Interferometer Space Antenna or short LISA, a space mission led by the European Space Agency with support from NASA, and the Chinese space mission Tianji will observe in the mHz band from 2035 and will be sensitive to emissions from supermassive black holes, massive compact objects orbiting a supermassive black hole and the stochastic gravitational wave background from physical processes in the very early Universe.
 
 To fully exploit the current and future observations and derive important information about the physics of the emitting sources, state-of-the-art statistical inference techniques are essential. To claim a detection with confidence requires a careful consideration of the evidence of the model with gravitational wave signal present as compared to a model with just instrumental noise. Furthermore, the observations of gravitational waves by terrestrial detectors now and by future space-based detectors present possibilities to put general relativity to the test. These require a methodology for statistical hypothesis tests or model comparison, e.g.\ testing the null hypothesis ``$H_0: M_0\mbox{ holds}$" against the alternative ``$H_1: M_1 \mbox{ holds}$".  Using a frequentist approach, hypothesis testing is done by
 choosing a test statistic and calculating the so-called 
