--- a/main.tex
+++ b/main.tex
@@ -185,7 +185,7 @@ Abstract: a super fast method
 
 
 It was not until almost 100 years after Einstein in 1916 predicted the existence of gravitational waves (GWs) that the first direct detection from a binary
-black hole merger was confirmed by the Laser Interferometer Gravitational-Wave Observatory (LIGO) \cite{abbott2016observation}. Since then, multiple GWs have been detected (references) through a network of ground-based detectors, comprising the LIGO, Virgo  and Kamioka Gravitational Wave (KAGRA) interferometers. However, ground-based detectors have short (3-4km) arm lengths and limited sensitivities at low frequencies due to environmental noise. The Laser Interferometer Space Antenna (LISA) (\cite{danzmann2000lisa}) mission, led by the European Space Agency in collaboration with NASA with the goal to put a gravitational wave detector into space by 2035, will give access to a lower frequency range of gravitational wave signals. LISA's arms will extend over 2.5 million kilometers. As stated in \cite{boileau2023prospects}, LISA will receive signals from various astronomical and cosmological sources such as the inspirals of stellar-mass binaries, mergers of supermassive black holes, the capture of a stellar-mass black hole by a supermassive black hole, and gravitational waves from physical processes in the very early Universe. 
+black hole merger was confirmed by the Laser Interferometer Gravitational-Wave Observatory (LIGO) \cite{abbott2016observation}. Since then, multiple GWs have been detected (references) through a network of ground-based detectors, comprising the LIGO, Virgo, and Kamioka Gravitational Wave (KAGRA) interferometers. However, ground-based detectors have short (3-4km) arm lengths and limited sensitivities at low frequencies due to environmental noise. The Laser Interferometer Space Antenna (LISA) (\cite{danzmann2000lisa}) mission, led by the European Space Agency in collaboration with NASA with the goal to put a gravitational wave detector into space by 2035, will give access to a lower frequency range of gravitational wave signals. LISA's arms will extend over 2.5 million kilometers. As stated in \cite{boileau2023prospects}, LISA will receive signals from various astronomical and cosmological sources such as the inspirals of stellar-mass binaries, mergers of supermassive black holes, the capture of a stellar-mass black hole by a supermassive black hole, and gravitational waves from physical processes in the very early Universe. 
 %{\em Remark: Add general intro to LVK and LISA.}
 
 Bayesian inference is currently the most widely adopted framework of inferences in astrophysics \cite{saha1994unfolding}, gravitational wave analysis \cite{christensen1998markov} and cosmology \cite{christensen2001bayesian, knox2001age}. 
@@ -303,7 +303,7 @@ As shown in section 3.2 of \cite{rotiroti2022computing}, in the univariate case 
 The bias and variance of the FI estimator compare favourably with that of a kernel density estimator. The bandwidth $h$ of a kernel density estimator is a smoothing parameter. The bias and variance of the kernel density estimator is of order $h^2$ and $\frac{1}{nh}$, respectively, in the one-dimensional case.  With $R=1/h$ playing the role of the reciprocal of the smoothing parameter, the variance of both methods is of the same magnitude but the bias for the FI estimate is much smaller. 
 
 \subsection{\label{subsec:thetastar} Choice of $\btheta^*$}
-In theory, the expression for the evidence in equation (\ref{eq:FIevidence}) holds for any point in the parameter space. However, for practical purposes, points with 
+In theory, the expression for the evidence in equation (\ref{eq:FIevidence}) holds for any point in the parameter space. However, for practical purposes, points with high posterior density should yield more efficient estimates \cite{chib1995marginal,chib2001marginal}. We recommend choosing the sample posterior mean or median for $\btheta^*$.
 
 \textcolor{red}{Renate: I got up to here}
 \vspace{4cm}
