rename pictures -> figures

--- a/main.tex
+++ b/main.tex
@@ -469,8 +469,8 @@ where the integral window, $h_R(s) = \mathbbm{1}[-R < s < R]$, can be considered
 
 \begin{figure}
     \centering
-    \includegraphics[page = 1, scale = 0.45]{pictures/section 2/integralwindow.pdf}
-    \includegraphics[page = 2, scale = 0.45]{pictures/section 2/integralwindow.pdf}
+    \includegraphics[page = 1, scale = 0.45]{figures/integralwindow.pdf}
+    \includegraphics[page = 2, scale = 0.45]{figures/integralwindow.pdf}
     \caption{Different types of integral windows}
     \label{fig:FI integral windows}
 \end{figure}
@@ -636,7 +636,7 @@ In multivariate scenarios, however, the bias of (absolute) FI do not necessarily
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.5\linewidth]{pictures/FI_simulation.png}
+    \includegraphics[width=0.5\linewidth]{figures/FI_simulation.png}
     \caption{\avi{Change this to a hist?}}
     \label{fig:enter-label}
 \end{figure}
@@ -651,7 +651,7 @@ In multivariate scenarios, however, the bias of (absolute) FI do not necessarily
 \begin{figure}[h]
 \caption{A comparison of the FI, NS and SS $\ln \mathcal{L}$ using GW150914 data: The box plot displays the FI... The horizontal orange and green bars show the NS and SS... }
 \centering
-\includegraphics[width=0.3\textwidth]{pictures/GW150914.png}
+\includegraphics[width=0.3\textwidth]{figures/GW150914.png}
 \end{figure}
 
 \subsection{\label{subsec:LISA} Simulated LISA SGWB}
