--- a/my_bib.bib
+++ b/my_bib.bib
@@ -160,7 +160,6 @@ copyright = {2023 IOP Publishing Ltd and Sissa Medialab},
 issn = {1475-7516},
 journal = {Journal of cosmology and astroparticle physics},
 keywords = {Accuracy ; Amplitudes ; Background noise ; Bayesian reasoning ; cosmological phase transitions ; Gravitational waves ; gravitational waves / sources ; LISA (antenna) ; Markov chains ; Mathematical models ; Monte Carlo method ; Parameters ; Peak frequency ; Phase transitions ; Universe ; white and brown dwarfs ; White dwarf stars},
-language = {eng},
 number = {2},
 pages = {56-},
 publisher = {IOP Publishing},
@@ -212,7 +211,6 @@ year = {2023},
 }
 
 @book{pristley2005introduction,
-language = {eng},
 publisher = {Oxford University Press},
 title = {Introduction to complex analysis  },
 year = {2005 - 2003},
@@ -274,16 +272,15 @@ keywords = {Mathematical analysis},
 @book{alma9998701914002091,
 author = {Casella, George. and Berger, Roger L.},
 address = {Australia ;},
-booktitle = {Statistical inference},
+title = {Statistical inference},
 edition = {2nd ed.},
 isbn = {0534243126},
 keywords = {Mathematical statistics},
-language = {eng},
-lccn = {2001025794},
 publisher = {Thomson Learning},
 title = {Statistical inference },
 year = {2002},
 }
+
 
 @book{GelmanAndrew2014,
 isbn = {9781439840955},
@@ -317,7 +314,6 @@ copyright = {2022. This work is published under http://creativecommons.org/licen
 issn = {0034-6861},
 journal = {Reviews of modern physics},
 keywords = {Astronomy ; Binary stars ; Black holes ; Gravitational waves ; Neutron stars ; Parameter estimation ; Physical properties ; Physics - General Relativity and Quantum Cosmology ; Pulsars ; Relativity ; Signal detection ; Star mergers ; Statistical methods ; Supernovae ; Waveforms},
-language = {eng},
 number = {2},
 pages = {1-},
 publisher = {Cornell University Library, arXiv.org},
@@ -333,7 +329,6 @@ copyright = {2010. This work is published under http://arxiv.org/licenses/nonexc
 issn = {2331-8422},
 journal = {arXiv.org},
 keywords = {Asymptotic properties ; Bayesian analysis ; Computer Science - Learning ; Criteria ; Equivalence ; Errors ; Learning ; Learning theory ; Optimization ; Random variables ; Statistical methods ; Statistical models},
-language = {eng},
 publisher = {Cornell University Library, arXiv.org},
 title = {Asymptotic Equivalence of Bayes Cross Validation and Widely Applicable Information Criterion in Singular Learning Theory},
 year = {2010},
@@ -345,7 +340,6 @@ address = {New York},
 issn = {1053-5888},
 journal = {IEEE signal processing magazine},
 keywords = {Autoregressive moving average ; Covariance matrix ; Criteria ; Frequency ; Mathematical analysis ; Mathematical models ; Maximum likelihood estimation ; Noise level ; Parameter estimation ; Phase noise ; Probability density function ; Sensor arrays ; Signal processing ; Specifications ; Vectors (mathematics) ; Vehicles},
-language = {eng},
 number = {4},
 pages = {36-47},
 publisher = {IEEE},
@@ -376,7 +370,6 @@ copyright = {Copyright Taylor & Francis Group, LLC 1989},
 issn = {0162-1459},
 journal = {Journal of the American Statistical Association},
 keywords = {Approximation ; Approximation theory ; Asymptotic expansions ; Bayesian analysis ; Difference quotients ; Exact sciences and technology ; Inference ; Integrals ; Integrands ; Laplaces method ; Mathematical foundations ; Mathematical functions ; Mathematical integrals ; Mathematics ; Parameterization ; Probability and statistics ; Sciences and techniques of general use ; Statistical discrepancies ; Statistics ; Theory and Methods},
-language = {eng},
 number = {407},
 pages = {710-716},
 publisher = {Taylor & Francis Group},
@@ -405,7 +398,6 @@ copyright = {International Association for Mathematical Geosciences 2019},
 issn = {1874-8961},
 journal = {Mathematical geosciences},
 keywords = {Algorithms ; Chemistry and Earth Sciences ; Computer Science ; Computer simulation ; Conditional probability ; Convergence ; Distribution ; Earth and Environmental Science ; Earth science ; Earth Sciences ; Geology ; Geosciences, Multidisciplinary ; Geotechnical Engineering & Applied Earth Sciences ; Hydrogeology ; Identification methods ; Imaging techniques ; Inverse problems ; Inversion ; Investigations ; Markov analysis ; Markov chains ; Mathematical models ; Mathematics ; Mathematics, Interdisciplinary Applications ; Matrix algebra ; Matrix methods ; Matrix representation ; Parameters ; Physical Sciences ; Physics ; Probability distribution ; Probability theory ; Production methods ; Science & Technology ; Special Issue ; Statistical analysis ; Statistical methods ; Statistics ; Statistics for Engineering ; Subsurface investigations},
-language = {eng},
 number = {5},
 pages = {651-668},
 publisher = {Springer Berlin Heidelberg},
@@ -425,3 +417,91 @@ year = {2020},
   publisher={Taylor \& Francis}
 }
 
+
+@ARTICLE{GW150914,
+       author = {{Abbott}, B.~P. and {Abbott}, R. and {Abbott}, T.~D. and {Abernathy}, M.~R. and {Acernese}, F. and et al.},
+        title = "{Observation of Gravitational Waves from a Binary Black Hole Merger}",
+      journal = {\prl},
+     keywords = {General Relativity and Quantum Cosmology, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2016,
+        month = feb,
+       volume = {116},
+       number = {6},
+          eid = {061102},
+        pages = {061102},
+          doi = {10.1103/PhysRevLett.116.061102},
+archivePrefix = {arXiv},
+       eprint = {1602.03837},
+ primaryClass = {gr-qc},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016PhRvL.116f1102A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{LIGO,
+       author = {{LIGO Scientific Collaboration} and {Aasi}, J. and {Abbott}, B.~P. and {Abbott}, R. and {Abbott}, T. and et al.},
+        title = "{Advanced LIGO}",
+      journal = {Classical and Quantum Gravity},
+     keywords = {General Relativity and Quantum Cosmology, Astrophysics - Instrumentation and Methods for Astrophysics, Physics - Instrumentation and Detectors},
+         year = 2015,
+        month = apr,
+       volume = {32},
+       number = {7},
+          eid = {074001},
+        pages = {074001},
+          doi = {10.1088/0264-9381/32/7/074001},
+archivePrefix = {arXiv},
+       eprint = {1411.4547},
+ primaryClass = {gr-qc},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015CQGra..32g4001L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{VIRGO,
+       author = {{Acernese}, F. and {Agathos}, M. and {Agatsuma}, K. and {Aisa}, D. and {Allemandou}, N. and et al.},
+        title = "{Advanced Virgo: a second-generation interferometric gravitational wave detector}",
+      journal = {Classical and Quantum Gravity},
+     keywords = {gravitational wave detectors, laser interferometry, gravitational waves, 04.80.Nn, 95.55.Ym, General Relativity and Quantum Cosmology, Physics - Instrumentation and Detectors},
+         year = 2015,
+        month = jan,
+       volume = {32},
+       number = {2},
+          eid = {024001},
+        pages = {024001},
+          doi = {10.1088/0264-9381/32/2/024001},
+archivePrefix = {arXiv},
+       eprint = {1408.3978},
+ primaryClass = {gr-qc},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015CQGra..32b4001A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{KAGRA,
+       author = {{Akutsu}, T. and {Ando}, M. and {Arai}, K. and {Arai}, Y. and {Araki}, S. and et al.},
+        title = "{Overview of KAGRA: Detector design and construction history}",
+      journal = {Progress of Theoretical and Experimental Physics},
+     keywords = {F30, Physics - Instrumentation and Detectors, Astrophysics - Instrumentation and Methods for Astrophysics, General Relativity and Quantum Cosmology},
+         year = 2021,
+        month = may,
+       volume = {2021},
+       number = {5},
+          eid = {05A101},
+        pages = {05A101},
+          doi = {10.1093/ptep/ptaa125},
+archivePrefix = {arXiv},
+       eprint = {2005.05574},
+ primaryClass = {physics.ins-det},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021PTEP.2021eA101A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@misc{ho2020multivariate,
+      title={Multivariate Smoothing via the Fourier Integral Theorem and Fourier Kernel}, 
+      author={Nhat Ho and Stephen G. Walker},
+      year={2020},
+      eprint={2012.14482},
+      archivePrefix={arXiv},
+      primaryClass={math.ST}
+}
